# dibs

./: .gitignore  BUCK  Cargo.toml  README.md  README.md.in  package.json  pnpm-lock.yaml  release-plz.toml
.claude/: CLAUDE.md
.config/: dodeca.yaml
.github/workflows/: ci.yml  release.yml  website.yml
crates/dibs/: Cargo.toml  README.md
crates/dibs-cli/: Cargo.toml  build.rs
crates/dibs-cli/src/: config.rs  highlight.rs  lsp_extension.rs  main.rs  service.rs  tui.rs
crates/dibs-cli/tests/lsp/: completions.styx
crates/dibs-codegen/: Cargo.toml  README.md
crates/dibs-codegen/src/: main.rs
crates/dibs-config/: Cargo.toml
crates/dibs-config/src/: lib.rs
crates/dibs-macros/: Cargo.toml  README.md
crates/dibs-macros/src/: lib.rs
crates/dibs-proto/: Cargo.toml  README.md.in
crates/dibs-proto/src/: lib.rs
crates/dibs-query-gen/: Cargo.toml  README.md.in
crates/dibs-query-gen/src/: ast.rs  codegen.rs  lib.rs  parse.rs  planner.rs  schema.rs  sql.rs
crates/dibs-query-gen/tests/: postgres_integration.rs
crates/dibs-query-schema/: Cargo.toml  README.md
crates/dibs-query-schema/src/: lib.rs
crates/dibs-runtime/: Cargo.toml  README.md.in
crates/dibs-runtime/src/: lib.rs
crates/dibs-sql/: Cargo.toml  README.md
crates/dibs-sql/src/: expr.rs  lib.rs  render.rs  stmt.rs
crates/dibs-sql/tests/: snapshots.rs
crates/dibs-sql/tests/snapshots/: snapshots__delete_no_returning.snap  snapshots__delete_simple.snap  snapshots__ilike_search.snap  snapshots__insert_simple.snap  snapshots__insert_with_default.snap  snapshots__pretty_insert.snap  snapshots__pretty_select.snap  snapshots__pretty_upsert.snap  snapshots__select_with_join.snap  snapshots__select_with_params.snap  snapshots__select_with_where_and_order.snap  snapshots__simple_select.snap  snapshots__update_multiple_conditions.snap  snapshots__update_simple.snap  snapshots__upsert.snap  snapshots__upsert_do_nothing.snap
crates/dibs/proptest-regressions/: solver.txt
crates/dibs/src/: backoffice.rs  diff.rs  error.rs  introspect.rs  lib.rs  meta.rs  migrate.rs  pool.rs  schema.rs  service.rs  solver.rs
crates/dibs/src/query/: ast.rs  build.rs  exec.rs  expr.rs  mod.rs  row.rs  value.rs
crates/dibs/src/snapshots/: dibs__diff__tests__snapshot_rename_column_sql.snap
crates/dibs/tests/: postgres_integration.rs
crates/dockside/: Cargo.toml  README.md
crates/dockside/src/: lib.rs
crates/facet-tokio-postgres/: Cargo.toml
crates/facet-tokio-postgres/src/: jsonb.rs  lib.rs
crates/facet-tokio-postgres/tests/: integration.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: CLI-REFERENCE.md  META-TABLES.md  MIGRATIONS-VISION.md  ROADMAP.md  TUI-VISION.md
docs/content/: _index.md
docs/content/guide/: _index.md  admin-ui.md  db-crate.md  deployment.md  first-migration.md  first-query.md  first-table.md  queries-crate.md  tui.md
docs/content/internals/: _index.md  meta-tables.md
docs/content/reference/: _index.md  cli.md  configuration.md  meta-tables.md
docs/static/css/: style.css
docs/templates/: base.html  index.html  macros.html  page.html  section.html
examples/admin-ui/: .gitignore  ROAM_CODEGEN_GAPS.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
examples/admin-ui/src/: App.svelte  app.css
examples/admin-ui/src/lib/: roam.ts
examples/my-app/: Cargo.toml
examples/my-app-db/: .env  Cargo.toml  dibs.styx
examples/my-app-db/src/: lib.rs  main.rs
examples/my-app-db/src/migrations/: m20260118113357_initial_schema.rs  m2026_01_18_181821_create_tables.rs  m2026_01_18_193741_lotsa_new_tables.rs  mod.rs
examples/my-app-queries/: Cargo.toml  build.rs  queries.styx
examples/my-app-queries/.dibs-queries/: queries.styx
examples/my-app-queries/src/: lib.rs
examples/my-app-queries/tests/: query_integration.rs
examples/my-app-workspace/my-app/: Cargo.toml
examples/my-app-workspace/my-app-db/: Cargo.toml
examples/my-app-workspace/my-app-db/src/: lib.rs
examples/my-app-workspace/my-app-queries/: Cargo.toml  build.rs
examples/my-app-workspace/my-app-queries/.dibs-queries/: queries.styx
examples/my-app-workspace/my-app/src/: main.rs
examples/my-app/src/: main.rs
todo/: 002-compile-time-validation.md  004-jsonb-operators.md  007-VISION-query-and-backoffice.md  012-codegen-refactor.md  overview.md
todo/query-dsl/: 01-dsl-design.md  02-schema-integration.md  03-code-generation.md  04-lsp.md  prototype-queries.styx
