[package]
name = "dibs-cli"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "CLI for dibs - Postgres toolkit for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"

[[bin]]
name = "dibs"
path = "src/main.rs"

[build-dependencies]
dibs-config = { path = "../dibs-config" }
dibs-query-schema = { path = "../dibs-query-schema" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }

[dependencies]
styx-embed = { git = "https://github.com/bearcove/styx", branch = "main" }
dibs = { path = "../dibs" }
dibs-config = { path = "../dibs-config" }
dibs-proto = { path = "../dibs-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-postgres = "0.7"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }
roam = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main" }
jiff = "0.2"
owo-colors = "4"
ratatui = "0.30"
crossterm = "0.29"
dotenvy = "0.15.7"
arborium = { version = "2", features = ["lang-rust"] }
arborium-highlight = "2"
arborium-theme = "2"
ariadne = "0.6"
