[package]
name = "dibs-cli"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "CLI for dibs - Postgres toolkit for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"

[[bin]]
name = "dibs"
path = "src/main.rs"

[build-dependencies]
dibs-config.workspace = true
dibs-query-schema.workspace = true
facet-styx.workspace = true

[dependencies]
styx-embed.workspace = true
styx-tree.workspace = true
styx-lsp-ext.workspace = true
dibs.workspace = true
dibs-config.workspace = true
dibs-proto.workspace = true
dibs-query-schema.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util", "io-std"] }
tokio-postgres.workspace = true
facet.workspace = true
facet-args.workspace = true
facet-styx.workspace = true
roam.workspace = true
roam-session.workspace = true
roam-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jiff.workspace = true
owo-colors.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dotenvy.workspace = true
arborium.workspace = true
arborium-highlight.workspace = true
arborium-theme.workspace = true
ariadne.workspace = true
