[package]
name = "dibs-codegen"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "dibs-codegen"
path = "src/main.rs"

[dependencies]
dibs-proto.workspace = true
roam-codegen.workspace = true
facet.workspace = true
figue.workspace = true
