[package]
name = "dibs-macros"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Proc macros for dibs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
proc-macro = true

[dependencies]
unsynn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
