[package]
name = "dibs-proto"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Protocol definitions for dibs CLI-to-service communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
roam.workspace = true
