[package]
name = "dibs-query-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
dibs-query-schema.workspace = true
dibs-sql = { path = "../dibs-sql" }
facet.workspace = true
facet-styx = { workspace = true, features = ["tracing"] }
styx-tree.workspace = true
styx-parse.workspace = true
thiserror.workspace = true
codegen.workspace = true

[dev-dependencies]
insta.workspace = true
tracing.workspace = true
facet-testhelpers.workspace = true
dockside.workspace = true
dibs-runtime.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
