[package]
name = "dibs-query-gen"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dibs-query-schema.workspace = true
dibs-sql = { path = "../dibs-sql" }
facet.workspace = true
facet-styx = { workspace = true, features = ["tracing"] }
styx-tree.workspace = true
styx-parse.workspace = true
thiserror.workspace = true
codegen.workspace = true

[dev-dependencies]
insta.workspace = true
tracing.workspace = true
facet-testhelpers.workspace = true
dockside.workspace = true
dibs-runtime.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
serde_json = "1"
