[package]
name = "dibs-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime types for dibs-generated query code"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tokio-postgres.workspace = true
facet.workspace = true
facet-tokio-postgres = { workspace = true, features = ["jiff02", "rust_decimal", "uuid"] }
jiff.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
