[package]
name = "dibs"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Postgres toolkit for Rust, powered by facet reflection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"
keywords = ["postgres", "database", "migrations", "facet"]
categories = ["database"]

[dependencies]
bytes = "1"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
inventory = "0.3"
thiserror = "2"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
dibs-macros = { path = "../dibs-macros" }
dibs-proto = { path = "../dibs-proto" }
roam = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main" }

[dev-dependencies]
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
