[package]
name = "dibs"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "Postgres toolkit for Rust, powered by facet reflection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/dibs"
keywords = ["postgres", "database", "migrations", "facet"]
categories = ["database"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
bytes.workspace = true
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
chrono.workspace = true
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
tokio.workspace = true
inventory.workspace = true
thiserror.workspace = true
facet.workspace = true
dibs-macros.workspace = true
dibs-proto.workspace = true
dibs-query-gen.workspace = true
roam.workspace = true
roam-stream.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
dockside.workspace = true
tokio.workspace = true
