[package]
name = "my-app-db"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "my-app-db"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
dibs = { path = "../../crates/dibs" }
dotenvy = "0.15"
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["jiff02", "rust_decimal"] }
jiff = "0.2.18"
rust_decimal = { version = "1", default-features = false, features = ["std"] }
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"
