[package]
name = "my-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "my-app"
path = "src/main.rs"

[dependencies]
my-app-db = { path = "../my-app-db" }
dibs = { path = "../../crates/dibs" }
dibs-proto = { path = "../../crates/dibs-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.26"
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-websocket = { git = "https://github.com/bearcove/roam", branch = "main" }
dotenvy = "0.15"
