[package]
name = "my-app-queries"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
my-app-db = { path = "../my-app-db" }
dibs-runtime.workspace = true

[build-dependencies]
dibs.workspace = true
my-app-db = { path = "../my-app-db" }

[dev-dependencies]
dockside.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
dibs.workspace = true
